[package]
name = "ert"
version = "0.1.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/YushiOMOTE/ert"
description = "A combinator to control future execution order."
keywords = ["futures", "ert"]
readme = "README.md"

[dependencies]
log = "0.4"
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
rand = "0.7"
