[package]
name = "ert"
version = "0.3.0"
authors = ["Yushi Omote <yushi.omote@sbibits.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/YushiOMOTE/ert"
description = "A combinator to control future execution order."
keywords = ["futures", "ert"]
readme = "README.md"

[dependencies]
log = "0.4"
lazy_static = "1.4"
futures = "0.3"
tokio = { version = "1.20", features = ["full"] }
tokio-stream = "0.1"

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
